@startuml
class com.sun.glass.events.KeyEvent
class java.util.ArrayList
class java.util.Calendar
class javax.swing.JComboBox
class javax.swing.JFrame
class javax.swing.JOptionPane
class patient.care.Box
class patient.care.BoxDAO
class patient.care.Date
class patient.care.Doctor
class patient.care.DoctorDAO
class patient.care.Patient
class patient.care.PatientCare
class patient.care.PatientDAO
class patient.care.PatientsForm
class patient.care.Person
patient.care.Doctor --|> patient.care.Person
patient.care.Patient --|> patient.care.Person
patient.care.PatientsForm --|> javax.swing.JFrame
@enduml